--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next-routes": "^1.4.2",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
+    "react-datepicker": "^2.7.0",
     "react-dom": "^16.8.6",
     "react-typed": "^1.1.2",
     "reactstrap": "^8.0.0"
